--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^10.0.8",
-    "@react-three/fiber": "^9.1.2",
-    "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@react-three/fiber": "^9.1.0",
+    "@testing-library/dom": "^10.0.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/react-helmet": "^6.1.11",
     "@types/react-responsive": "^9.0.0",
     "framer-motion": "^12.12.2",
-    "particles.js": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
@@ -26,11 +28,7 @@
     "react-responsive": "^10.0.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.12.2",
     "three": "^0.176.0",
-    "tsparticles": "^3.8.1",
-    "tsparticles-engine": "^2.12.0",
-    "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
