--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@react-three/fiber": "^9.1.0",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.0",
-    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@testing-library/react-hooks": "^8.0.0-beta.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "@types/react": "^19.0.0",
