--- a/vercel.json
+++ b/vercel.json
@@ -8,13 +8,10 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
       "src": "/(.*)",
       "dest": "/$1"
     }
   ],
-  "buildCommand": "next build"
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next"
 }
