--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@testing-library/react-hooks": "^8.0.0-beta.1",
-    "@testing-library/jest-native": "^5.4.3",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "@types/react": "^19.0.0",
@@ -66,13 +65,12 @@
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.19.103",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^18.3.22",
+    "@types/react-dom": "^18.3.7",
     "@types/testing-library__react": "^10.2.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.8.3",
-    "@types/testing-library__jest-dom": "^5.14.9"
+    "typescript": "^5.8.3"
   }
 }
