--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,13 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/$1"
     }
   ],
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next"
+  "buildCommand": "next build"
 }
