--- a/package.json
+++ b/package.json
@@ -3,34 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^2.2.4",
-    "@heroicons/react": "^2.2.0",
-    "@react-three/drei": "^10.0.8",
-    "@react-three/fiber": "^9.1.2",
-    "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.8.1",
-    "@types/react-helmet": "^6.1.11",
-    "@types/react-responsive": "^9.0.0",
-    "framer-motion": "^12.12.2",
-    "particles.js": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.16.0",
-    "react-qr-code": "^2.0.15",
-    "react-responsive": "^10.0.1",
-    "react-router-dom": "^6.10.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.126",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.12.2",
-    "three": "^0.176.0",
-    "tsparticles": "^3.8.1",
-    "tsparticles-engine": "^2.12.0",
-    "tsparticles-slim": "^2.12.0",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,11 +31,8 @@
   },
   "browserslist": {
     "production": [
-      "chrome 64",
-      "edge 79",
-      "firefox 67",
-      "opera 51",
-      "safari 12",
+      ">0.2%",
+      "not dead",
       "not op_mini all"
     ],
     "development": [
@@ -59,17 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.19.103",
-    "@types/react": "^18.3.22",
-    "@types/react-dom": "^18.3.7",
-    "@types/testing-library__react": "^10.2.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.8.3"
   }
 }
