--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
-    "@react-three/drei": "^10.0.8",
-    "@react-three/fiber": "^9.1.2",
+    "@react-three/drei": "^9.0.0",
+    "@react-three/fiber": "^8.15.17",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -16,9 +16,8 @@
     "@types/react-helmet": "^6.1.11",
     "@types/react-responsive": "^9.0.0",
     "framer-motion": "^12.12.2",
-    "particles.js": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
@@ -26,18 +25,16 @@
     "react-responsive": "^10.0.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.12.2",
     "three": "^0.176.0",
-    "tsparticles": "^3.8.1",
-    "tsparticles-engine": "^2.12.0",
-    "tsparticles-slim": "^2.12.0",
-    "web-vitals": "^2.1.4"
+    "tsparticles": "^3.8.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
