--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@types/react-helmet": "^6.1.11",
     "@types/react-responsive": "^9.0.0",
     "framer-motion": "^12.12.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
@@ -35,6 +35,9 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+  },
+  "installConfig": {
+    "hoistingLimits": "workspaces"
   },
   "eslintConfig": {
     "extends": [
