--- a/vercel.json
+++ b/vercel.json
@@ -27,5 +27,6 @@
       "dest": "/index.html"
     }
   ],
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "installCommand": "npm install --legacy-peer-deps"
 }
