Fix client-side routing for Netlify deployment

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,7 +9,24 @@
   publish = "build"
   targetPort = 3000
 
+# Handle client-side routing - return all requests to index.html
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = false
+
+# Cache static assets for better performance
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "same-origin"
+    
+# Cache static assets for 1 year
+[[headers]]
+  for = "/static/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
