--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/react-dom": "^18.3.7",
     "@types/testing-library__react": "^10.2.0",
     "autoprefixer": "^10.4.14",
+    "netlify-cli": "^21.5.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.8.3"
