--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tsparticles/slim": "^3.8.1",
     "@types/react-helmet": "^6.1.11",
     "@types/react-responsive": "^9.0.0",
+    "chart.js": "^4.4.9",
     "framer-motion": "^12.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -62,6 +63,7 @@
   },
   "devDependencies": {
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
+    "@types/chart.js": "^4.0.1",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.19.103",
     "@types/react": "^18.3.22",
