--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@tsparticles/slim": "^3.8.1",
     "@types/react-helmet": "^6.1.11",
     "@types/react-responsive": "^9.0.0",
+    "@types/three": "^0.176.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "chart.js": "^4.4.9",
     "framer-motion": "^12.12.2",
     "react": "^18.2.0",
