--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/react": "^18.3.22",
     "@types/react-dom": "^18.3.7",
     "@types/testing-library__react": "^10.2.0",
+    "@types/xterm": "^3.0.0",
     "autoprefixer": "^10.4.14",
     "netlify-cli": "^21.5.0",
     "postcss": "^8.4.21",
