--- a/package.json
+++ b/package.json
@@ -1,50 +1,37 @@
 {
-  "name": "mywebsite",
+  "name": "spiritual-site",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^2.2.4",
-    "@heroicons/react": "^2.2.0",
-    "@react-three/drei": "^9.0.0",
-    "@react-three/fiber": "^8.15.17",
-    "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@heroicons/react": "^2.1.1",
+    "@tsparticles/engine": "^3.2.0",
     "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.8.1",
-    "@types/react-helmet": "^6.1.11",
-    "@types/react-responsive": "^9.0.0",
-    "@types/three": "^0.176.0",
-    "@xterm/addon-fit": "^0.10.0",
-    "@xterm/xterm": "^5.5.0",
+    "@tsparticles/slim": "^3.0.0",
+    "@types/chart.js": "^4.0.1",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.4.16",
     "chart.js": "^4.4.9",
-    "framer-motion": "^12.12.2",
+    "framer-motion": "^11.18.2",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-globe.gl": "^2.33.2",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.16.0",
-    "react-qr-code": "^2.0.15",
-    "react-responsive": "^10.0.1",
-    "react-router-dom": "^6.10.0",
+    "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.5.3",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
-    "three": "^0.176.0",
-    "tsparticles": "^3.8.1",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0"
+    "react-tsparticles": "^2.12.2",
+    "tailwindcss": "^3.4.0",
+    "tsparticles": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
+    "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "installConfig": {
-    "hoistingLimits": "workspaces"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -54,11 +41,8 @@
   },
   "browserslist": {
     "production": [
-      "chrome 64",
-      "edge 79",
-      "firefox 67",
-      "opera 51",
-      "safari 12",
+      ">0.2%",
+      "not dead",
       "not op_mini all"
     ],
     "development": [
@@ -68,18 +52,17 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
-    "@types/chart.js": "^4.0.1",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.19.103",
-    "@types/react": "^18.3.22",
-    "@types/react-dom": "^18.3.7",
-    "@types/testing-library__react": "^10.2.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.29",
+    "@types/react-helmet": "^6.1.11",
     "@types/xterm": "^3.0.0",
-    "autoprefixer": "^10.4.14",
-    "netlify-cli": "^21.5.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.8.3"
+    "react-globe.gl": "^2.33.2",
+    "react-helmet": "^6.1.0",
+    "react-qr-code": "^2.0.15",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   }
 }
